--- a/index.html
+++ b/index.html
@@ -20,38 +20,7 @@
         <input type="text" id="search" placeholder="Search" class="search" />
       </form>
     </header>
-    <main id="main">
-      <div class="movie">
-        <img src="./WIN_20200418_12_55_55_Pro.jpg" alt="Image" />
-        <div class="movie-info">
-          <h3>Movie title</h3><span class="green">9.8</span>
-        </div>
-        <div class="overview">
-            <h3>Overview</h3>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis ipsum neque aperiam in ab? Esse fugiat at, maiores quam autem voluptatem maxime assumenda. Facere qui voluptates totam quos rerum odit.
-        </div>
-      </div>
-      <div class="movie" >
-        <img src="./WIN_20200418_12_55_55_Pro.jpg" alt="Image" />
-        <div class="movie-info">
-          <h3>Movie title</h3><span class="green">9.8</span>
-        </div>
-        <div class="overview">
-            <h3>Overview</h3>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis ipsum neque aperiam in ab? Esse fugiat at, maiores quam autem voluptatem maxime assumenda. Facere qui voluptates totam quos rerum odit.
-        </div>
-      </div>
-      <div class="movie">
-        <img src="./WIN_20200418_12_55_55_Pro.jpg" alt="Image" />
-        <div class="movie-info">
-          <h3>Movie title</h3><span class="green">9.8</span>
-        </div>
-        <div class="overview">
-            <h3>Overview</h3>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis ipsum neque aperiam in ab? Esse fugiat at, maiores quam autem voluptatem maxime assumenda. Facere qui voluptates totam quos rerum odit.
-        </div>
-      </div>
-    </main>
+    <main id="main"></main>
   </body>
   <!-- JavaScript Bundle with Popper -->
   <script
