--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
       </form>
     </header>
     <main id="main"></main>
+    <div class="pagination">
+      <div class="page" id="prev">Previous Page</div>
+      <div class="current" id="current">1</div>
+      <div class="page" id="next">Next Page</div>
+    </div>
   </body>
   <!-- JavaScript Bundle with Popper -->
   <script
